fix(not working in safari): the stack dialog with class is not working. - in safari height is almost 0 px.  setting height in modal collapses styling between chrome and safari. - dialog does not know what is its contents in safari. leading all the contents overflowing outside of the dialog-contents. when it should be contained.

--- a/src/style/component.css
+++ b/src/style/component.css
@@ -6,6 +6,11 @@
   color: light-dark(var(--text-color-black), var(--text-color-light));
 }
 
+dialog[open] {
+  max-height: 100%;
+  min-height: 50%;
+}
+
 /* 
     https://unpkg.com/open-props@1.7.6/open-props.min.css for some cool animation variables
     https://codepen.io/fmontes/pen/yLveywJ for modal animation using the package
@@ -33,7 +38,7 @@
   width: 100%;
 
   @media (max-width: 600px) {
-    padding: 1rem;
+    padding: 1rem 2rem;
   }
 }
 
